samples/_failures_safe/1761345034_5a84ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03a1a4da.c: In function ‘main’:
./samples/SAFE/__tmp_03a1a4da.c:171:9: error: expected expression at end of input
  171 |         {EVENT_DATA_READY,
      |         ^
./samples/SAFE/__tmp_03a1a4da.c:171:9: error: expected declaration or statement at end of input
